Correction contraste couleur texte

--- a/style.css
+++ b/style.css
@@ -681,10 +681,9 @@ p {
 }
 
 .citation {
-    font-size: 16px;
+    font-size: 18px;
     font-style: italic;
     font-weight: 600;
-    color: #c27956!important;
 }
 
 .tight-width-whitespace {
